Fixed tags input deleting previous tag when backspacing in text

--- a/addon/styles/components/tags-input.scss
+++ b/addon/styles/components/tags-input.scss
@@ -37,13 +37,14 @@ label.tags.input {
 
       max-width: 100%;
 
-      background-color: transparentize($color-black, .8);
+      background-color: lighten($color-black, 70%);
 
       transform: scale(1);
       opacity: 1;
 
-      transition: transform .3s, opacity .3s,
-                  max-width .3s, padding .3s, margin .3s;
+      transition: transform .3s, opacity .3s, background-color .3s,
+                  max-width .2s, padding .2s, margin .2s;
+      transition-timing-function: ease-in-out;
 
       span {
         padding: 0;
@@ -65,6 +66,8 @@ label.tags.input {
       }
 
       &:hover, &:focus, &.selected {
+        background-color: lighten($color-black, 65%);
+
         span {
           transform: translateX(0);
         }
